FIX: amaroK could crash on startup, if on last exit sorting was enabled in the playlist.

The problem was that KListView::restoreLayout() also restores the sort order. Then, with sorting enabled, we restored current.xml. Qt obviously did not find this funny.

BUG: 113042


svn path=/trunk/extragear/multimedia/amarok/; revision=462932